[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/MusicPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/_meta/MusicCreator.gd" type="Script" id=2]
[ext_resource path="res://src/musics/hyi - mind breaking the body/hyi - mind breaking the body - 02 you can recover.ogg" type="AudioStream" id=3]

[node name="MusicCreator" type="Node2D"]
script = ExtResource( 2 )

[node name="MusicPlayer" parent="." instance=ExtResource( 1 )]
position = Vector2( 416.05, 49.8904 )
autoplay = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 485.595, 217.624 )
scale = Vector2( 186.12, 36.6259 )
stream = ExtResource( 3 )

[node name="CurrentTime" type="Label" parent="."]
margin_left = 351.01
margin_top = 11.5715
margin_right = 434.01
margin_bottom = 35.5715
rect_pivot_offset = Vector2( -367.768, -39.4279 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 651.029
margin_top = 148.088
margin_right = 734.029
margin_bottom = 172.088
rect_pivot_offset = Vector2( -367.768, -39.4279 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Miss" type="Label" parent="."]
margin_left = 653.41
margin_top = 214.759
margin_right = 736.41
margin_bottom = 238.759
rect_pivot_offset = Vector2( -367.768, -39.4279 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JsonResult" type="TextEdit" parent="."]
margin_left = 11.7553
margin_top = 38.9914
margin_right = 339.755
margin_bottom = 409.991
text = "[{\"time\":0.609524,\"note\":\"left\"},{\"time\":1.143583,\"note\":\"right\"},{\"time\":2.39746,\"note\":\"left\"},{\"time\":2.62966,\"note\":\"right\"},{\"time\":2.838639,\"note\":\"left\"},{\"time\":3.999637,\"note\":\"up\"},{\"time\":4.185397,\"note\":\"down\"},{\"time\":4.371157,\"note\":\"up\"},{\"time\":4.533696,\"note\":\"down\"},{\"time\":4.765896,\"note\":\"up\"},{\"time\":4.928435,\"note\":\"down\"},{\"time\":5.160635,\"note\":\"up\"},{\"time\":5.369615,\"note\":\"down\"},{\"time\":5.950113,\"note\":\"left\"},{\"time\":6.553832,\"note\":\"right\"},{\"time\":7.48263,\"note\":\"left\"},{\"time\":7.62195,\"note\":\"right\"},{\"time\":7.78449,\"note\":\"left\"},{\"time\":7.97025,\"note\":\"right\"},{\"time\":9.851066,\"note\":\"up\"},{\"time\":10.036825,\"note\":\"down\"},{\"time\":10.222585,\"note\":\"up\"},{\"time\":10.408344,\"note\":\"down\"},{\"time\":10.617324,\"note\":\"up\"},{\"time\":10.803084,\"note\":\"down\"},{\"time\":11.313923,\"note\":\"left\"},{\"time\":11.964082,\"note\":\"right\"},{\"time\":12.73034,\"note\":\"left\"},{\"time\":13.125079,\"note\":\"right\"},{\"time\":13.241179,\"note\":\"left\"},{\"time\":13.380499,\"note\":\"right\"},{\"time\":13.496598,\"note\":\"left\"},{\"time\":13.635919,\"note\":\"right\"},{\"time\":13.960998,\"note\":\"left\"},{\"time\":14.146757,\"note\":\"right\"},{\"time\":15.214875,\"note\":\"up\"},{\"time\":15.400635,\"note\":\"down\"},{\"time\":15.586394,\"note\":\"up\"},{\"time\":15.772154,\"note\":\"down\"},{\"time\":15.934694,\"note\":\"up\"},{\"time\":16.120453,\"note\":\"down\"},{\"time\":16.282993,\"note\":\"up\"},{\"time\":16.515192,\"note\":\"down\"},{\"time\":16.863493,\"note\":\"left\"},{\"time\":17.490431,\"note\":\"right\"},{\"time\":18.372789,\"note\":\"left\"},{\"time\":18.46567,\"note\":\"right\"},{\"time\":18.651428,\"note\":\"left\"},{\"time\":18.790749,\"note\":\"right\"},{\"time\":18.930069,\"note\":\"left\"},{\"time\":19.162268,\"note\":\"right\"},{\"time\":20.578686,\"note\":\"up\"},{\"time\":20.764444,\"note\":\"down\"},{\"time\":20.950205,\"note\":\"up\"},{\"time\":21.112743,\"note\":\"down\"},{\"time\":21.298504,\"note\":\"up\"},{\"time\":21.507483,\"note\":\"down\"},{\"time\":21.693243,\"note\":\"up\"},{\"time\":21.879002,\"note\":\"down\"},{\"time\":22.343401,\"note\":\"left\"},{\"time\":22.436281,\"note\":\"right\"},{\"time\":22.575602,\"note\":\"left\"},{\"time\":22.923901,\"note\":\"right\"},{\"time\":23.040001,\"note\":\"left\"},{\"time\":23.36508,\"note\":\"right\"},{\"time\":23.481178,\"note\":\"left\"},{\"time\":23.666939,\"note\":\"right\"},{\"time\":23.968798,\"note\":\"left\"},{\"time\":24.108118,\"note\":\"right\"},{\"time\":24.270658,\"note\":\"left\"},{\"time\":24.456417,\"note\":\"right\"},{\"time\":24.526077,\"note\":\"left\"},{\"time\":24.758276,\"note\":\"right\"},{\"time\":24.874376,\"note\":\"left\"},{\"time\":25.269115,\"note\":\"right\"},{\"time\":25.408436,\"note\":\"left\"},{\"time\":25.594194,\"note\":\"right\"},{\"time\":25.710295,\"note\":\"left\"},{\"time\":26.012154,\"note\":\"right\"},{\"time\":26.105034,\"note\":\"left\"},{\"time\":26.290794,\"note\":\"right\"},{\"time\":26.406893,\"note\":\"left\"},{\"time\":26.546213,\"note\":\"right\"},{\"time\":26.871292,\"note\":\"left\"},{\"time\":27.010612,\"note\":\"right\"},{\"time\":27.358912,\"note\":\"left\"},{\"time\":27.521452,\"note\":\"right\"},{\"time\":27.63755,\"note\":\"left\"},{\"time\":27.776871,\"note\":\"right\"},{\"time\":28.14839,\"note\":\"left\"},{\"time\":28.28771,\"note\":\"right\"},{\"time\":28.403809,\"note\":\"left\"},{\"time\":28.543129,\"note\":\"right\"},{\"time\":28.682449,\"note\":\"left\"},{\"time\":29.100409,\"note\":\"right\"},{\"time\":29.216509,\"note\":\"left\"},{\"time\":29.355827,\"note\":\"right\"},{\"time\":29.495148,\"note\":\"left\"},{\"time\":29.611248,\"note\":\"right\"},{\"time\":29.773787,\"note\":\"left\"},{\"time\":29.913107,\"note\":\"right\"},{\"time\":30.214966,\"note\":\"left\"},{\"time\":30.354286,\"note\":\"right\"},{\"time\":30.493605,\"note\":\"left\"},{\"time\":30.656145,\"note\":\"right\"},{\"time\":30.772245,\"note\":\"left\"},{\"time\":30.911564,\"note\":\"right\"},{\"time\":31.120544,\"note\":\"left\"},{\"time\":31.352743,\"note\":\"right\"},{\"time\":31.468843,\"note\":\"left\"},{\"time\":31.631384,\"note\":\"right\"},{\"time\":31.724262,\"note\":\"left\"},{\"time\":31.886803,\"note\":\"right\"},{\"time\":32.002903,\"note\":\"left\"},{\"time\":32.119003,\"note\":\"right\"},{\"time\":32.536961,\"note\":\"left\"},{\"time\":32.653061,\"note\":\"right\"},{\"time\":32.978142,\"note\":\"left\"},{\"time\":33.372879,\"note\":\"right\"},{\"time\":33.488979,\"note\":\"left\"},{\"time\":33.6283,\"note\":\"right\"},{\"time\":33.79084,\"note\":\"left\"},{\"time\":34.115917,\"note\":\"left\"},{\"time\":34.255238,\"note\":\"right\"},{\"time\":34.417778,\"note\":\"left\"},{\"time\":34.557098,\"note\":\"right\"},{\"time\":34.998276,\"note\":\"left\"},{\"time\":35.137596,\"note\":\"right\"},{\"time\":35.253696,\"note\":\"left\"},{\"time\":35.439457,\"note\":\"right\"},{\"time\":35.578777,\"note\":\"left\"},{\"time\":36.019955,\"note\":\"right\"},{\"time\":36.112835,\"note\":\"left\"},{\"time\":36.298595,\"note\":\"right\"},{\"time\":36.379864,\"note\":\"left\"},{\"time\":36.716553,\"note\":\"right\"},{\"time\":36.879093,\"note\":\"left\"},{\"time\":37.018414,\"note\":\"right\"},{\"time\":37.134514,\"note\":\"left\"},{\"time\":37.29705,\"note\":\"right\"},{\"time\":37.413151,\"note\":\"left\"},{\"time\":37.831112,\"note\":\"right\"},{\"time\":37.947212,\"note\":\"left\"},{\"time\":38.225849,\"note\":\"right\"},{\"time\":38.341949,\"note\":\"left\"},{\"time\":38.69025,\"note\":\"right\"},{\"time\":38.876011,\"note\":\"left\"},{\"time\":39.015327,\"note\":\"right\"},{\"time\":39.131428,\"note\":\"left\"},{\"time\":39.479729,\"note\":\"right\"},{\"time\":39.595829,\"note\":\"left\"},{\"time\":39.781586,\"note\":\"right\"},{\"time\":39.897686,\"note\":\"left\"},{\"time\":40.013786,\"note\":\"right\"},{\"time\":40.153107,\"note\":\"left\"},{\"time\":40.547844,\"note\":\"right\"},{\"time\":40.640724,\"note\":\"left\"},{\"time\":40.803265,\"note\":\"right\"},{\"time\":40.896145,\"note\":\"left\"},{\"time\":41.314106,\"note\":\"right\"},{\"time\":41.430202,\"note\":\"left\"},{\"time\":41.592743,\"note\":\"right\"},{\"time\":41.685623,\"note\":\"left\"},{\"time\":41.894604,\"note\":\"right\"},{\"time\":42.242901,\"note\":\"left\"},{\"time\":42.382221,\"note\":\"right\"},{\"time\":42.521542,\"note\":\"left\"},{\"time\":42.684082,\"note\":\"right\"},{\"time\":42.800182,\"note\":\"left\"},{\"time\":43.19492,\"note\":\"right\"},{\"time\":43.31102,\"note\":\"left\"},{\"time\":43.49678,\"note\":\"right\"},{\"time\":43.589661,\"note\":\"left\"},{\"time\":43.798641,\"note\":\"right\"},{\"time\":44.146938,\"note\":\"left\"},{\"time\":44.309479,\"note\":\"right\"},{\"time\":44.472019,\"note\":\"left\"},{\"time\":44.58812,\"note\":\"right\"},{\"time\":44.750656,\"note\":\"left\"},{\"time\":44.889977,\"note\":\"right\"},{\"time\":45.006077,\"note\":\"left\"},{\"time\":45.191837,\"note\":\"right\"},{\"time\":45.307938,\"note\":\"left\"},{\"time\":45.888435,\"note\":\"right\"},{\"time\":45.934875,\"note\":\"left\"},{\"time\":46.120636,\"note\":\"right\"},{\"time\":46.259956,\"note\":\"left\"},{\"time\":46.422493,\"note\":\"right\"},{\"time\":46.538593,\"note\":\"left\"},{\"time\":46.794014,\"note\":\"right\"},{\"time\":47.165531,\"note\":\"left\"},{\"time\":47.328072,\"note\":\"right\"},{\"time\":47.490612,\"note\":\"left\"},{\"time\":47.629932,\"note\":\"right\"},{\"time\":47.746033,\"note\":\"left\"},{\"time\":48.14077,\"note\":\"right\"},{\"time\":48.25687,\"note\":\"left\"},{\"time\":48.442631,\"note\":\"right\"},{\"time\":48.535511,\"note\":\"left\"},{\"time\":48.744492,\"note\":\"right\"},{\"time\":48.837368,\"note\":\"left\"},{\"time\":49.255329,\"note\":\"right\"},{\"time\":49.371429,\"note\":\"left\"},{\"time\":49.53397,\"note\":\"right\"},{\"time\":49.650066,\"note\":\"left\"},{\"time\":49.835827,\"note\":\"right\"},{\"time\":49.951927,\"note\":\"left\"},{\"time\":50.462765,\"note\":\"right\"},{\"time\":50.509205,\"note\":\"left\"},{\"time\":50.694965,\"note\":\"right\"},{\"time\":50.811066,\"note\":\"left\"},{\"time\":50.996826,\"note\":\"right\"},{\"time\":51.182587,\"note\":\"left\"},{\"time\":51.345123,\"note\":\"right\"},{\"time\":51.484444,\"note\":\"left\"},{\"time\":51.693424,\"note\":\"right\"},{\"time\":51.832745,\"note\":\"left\"},{\"time\":52.366802,\"note\":\"left\"},{\"time\":52.482903,\"note\":\"right\"},{\"time\":52.645443,\"note\":\"left\"},{\"time\":52.761543,\"note\":\"right\"},{\"time\":53.527802,\"note\":\"left\"},{\"time\":53.551022,\"note\":\"down\"},{\"time\":53.597462,\"note\":\"right\"},{\"time\":54.015419,\"note\":\"up\"},{\"time\":54.43338,\"note\":\"down\"},{\"time\":55.292519,\"note\":\"up\"},{\"time\":56.244534,\"note\":\"down\"},{\"time\":57.034012,\"note\":\"up\"},{\"time\":58.055691,\"note\":\"down\"},{\"time\":59.00771,\"note\":\"up\"},{\"time\":59.657867,\"note\":\"down\"},{\"time\":60.749207,\"note\":\"up\"},{\"time\":61.631565,\"note\":\"down\"},{\"time\":62.374603,\"note\":\"up\"},{\"time\":63.442722,\"note\":\"down\"},{\"time\":64.487617,\"note\":\"left\"},{\"time\":64.696602,\"note\":\"right\"},{\"time\":65.41642,\"note\":\"up\"},{\"time\":65.648613,\"note\":\"down\"},{\"time\":66.089798,\"note\":\"left\"},{\"time\":66.252335,\"note\":\"right\"},{\"time\":67.018593,\"note\":\"up\"},{\"time\":67.575874,\"note\":\"down\"},{\"time\":68.435013,\"note\":\"left\"},{\"time\":68.78331,\"note\":\"right\"},{\"time\":68.992287,\"note\":\"up\"},{\"time\":69.178047,\"note\":\"down\"},{\"time\":69.526352,\"note\":\"left\"},{\"time\":69.758553,\"note\":\"right\"},{\"time\":69.874649,\"note\":\"down\"},{\"time\":70.083626,\"note\":\"right\"},{\"time\":70.19973,\"note\":\"up\"},{\"time\":70.315826,\"note\":\"left\"},{\"time\":70.478371,\"note\":\"down\"},{\"time\":70.524811,\"note\":\"right\"},{\"time\":70.733788,\"note\":\"up\"},{\"time\":70.873108,\"note\":\"left\"},{\"time\":71.035645,\"note\":\"down\"},{\"time\":71.174965,\"note\":\"right\"},{\"time\":71.360725,\"note\":\"up\"},{\"time\":71.476822,\"note\":\"left\"},{\"time\":71.639366,\"note\":\"down\"},{\"time\":71.709023,\"note\":\"right\"},{\"time\":71.894783,\"note\":\"up\"},{\"time\":71.987663,\"note\":\"left\"},{\"time\":72.173424,\"note\":\"down\"},{\"time\":72.28952,\"note\":\"right\"},{\"time\":72.475281,\"note\":\"up\"},{\"time\":72.544945,\"note\":\"left\"},{\"time\":72.730705,\"note\":\"down\"},{\"time\":72.823586,\"note\":\"right\"},{\"time\":73.009346,\"note\":\"up\"},{\"time\":73.102219,\"note\":\"left\"},{\"time\":73.241539,\"note\":\"down\"},{\"time\":73.357643,\"note\":\"right\"},{\"time\":73.496964,\"note\":\"up\"},{\"time\":73.589844,\"note\":\"left\"},{\"time\":73.729164,\"note\":\"down\"},{\"time\":73.845261,\"note\":\"right\"},{\"time\":74.054237,\"note\":\"up\"},{\"time\":74.147118,\"note\":\"left\"},{\"time\":74.286438,\"note\":\"down\"},{\"time\":74.356102,\"note\":\"right\"},{\"time\":74.541862,\"note\":\"left\"},{\"time\":74.634743,\"note\":\"up\"},{\"time\":74.843719,\"note\":\"left\"},{\"time\":74.98304,\"note\":\"right\"},{\"time\":75.07592,\"note\":\"down\"},{\"time\":75.12236,\"note\":\"left\"},{\"time\":75.935059,\"note\":\"up\"},{\"time\":76.887077,\"note\":\"left\"},{\"time\":77.235374,\"note\":\"right\"},{\"time\":78.744675,\"note\":\"left\"},{\"time\":79.882446,\"note\":\"right\"},{\"time\":81.391747,\"note\":\"up\"},{\"time\":83.435104,\"note\":\"down\"},{\"time\":83.876282,\"note\":\"left\"},{\"time\":84.038818,\"note\":\"right\"},{\"time\":84.64254,\"note\":\"up\"},{\"time\":85.594559,\"note\":\"down\"},{\"time\":89.240089,\"note\":\"right\"},{\"time\":90.284988,\"note\":\"left\"},{\"time\":90.819046,\"note\":\"up\"},{\"time\":91.004807,\"note\":\"down\"},{\"time\":91.701408,\"note\":\"right\"},{\"time\":94.371704,\"note\":\"left\"},{\"time\":94.511017,\"note\":\"right\"},{\"time\":95.648796,\"note\":\"up\"},{\"time\":95.834557,\"note\":\"down\"},{\"time\":96.693695,\"note\":\"down\"},{\"time\":98.226212,\"note\":\"up\"},{\"time\":98.597733,\"note\":\"left\"},{\"time\":98.713829,\"note\":\"right\"},{\"time\":99.13179,\"note\":\"up\"},{\"time\":100.31601,\"note\":\"down\"},{\"time\":101.035828,\"note\":\"left\"},{\"time\":101.198364,\"note\":\"right\"},{\"time\":101.384125,\"note\":\"up\"},{\"time\":101.662766,\"note\":\"down\"},{\"time\":102.521904,\"note\":\"left\"},{\"time\":103.706123,\"note\":\"right\"},{\"time\":104.309845,\"note\":\"up\"},{\"time\":104.611702,\"note\":\"left\"},{\"time\":105.47084,\"note\":\"right\"},{\"time\":105.610161,\"note\":\"up\"},{\"time\":105.772697,\"note\":\"left\"},{\"time\":105.935242,\"note\":\"down\"},{\"time\":106.097778,\"note\":\"right\"},{\"time\":106.817596,\"note\":\"up\"},{\"time\":106.910477,\"note\":\"left\"},{\"time\":107.096237,\"note\":\"right\"},{\"time\":107.096237,\"note\":\"down\"},{\"time\":107.328438,\"note\":\"up\"},{\"time\":107.421318,\"note\":\"left\"},{\"time\":107.583855,\"note\":\"down\"},{\"time\":107.676735,\"note\":\"right\"},{\"time\":107.839272,\"note\":\"up\"},{\"time\":107.932152,\"note\":\"left\"},{\"time\":108.117912,\"note\":\"down\"},{\"time\":108.210793,\"note\":\"right\"},{\"time\":108.396553,\"note\":\"up\"},{\"time\":108.489433,\"note\":\"left\"},{\"time\":108.65197,\"note\":\"down\"},{\"time\":108.721634,\"note\":\"right\"},{\"time\":108.930611,\"note\":\"up\"},{\"time\":109.023491,\"note\":\"left\"},{\"time\":109.162811,\"note\":\"down\"},{\"time\":109.232475,\"note\":\"right\"},{\"time\":109.395012,\"note\":\"up\"},{\"time\":109.534332,\"note\":\"left\"},{\"time\":109.673653,\"note\":\"down\"},{\"time\":109.766533,\"note\":\"right\"},{\"time\":109.97551,\"note\":\"up\"},{\"time\":110.06839,\"note\":\"left\"},{\"time\":110.230927,\"note\":\"down\"},{\"time\":110.370247,\"note\":\"right\"},{\"time\":110.509567,\"note\":\"up\"},{\"time\":110.602448,\"note\":\"left\"},{\"time\":110.741768,\"note\":\"down\"},{\"time\":110.834648,\"note\":\"right\"},{\"time\":110.973969,\"note\":\"up\"},{\"time\":111.066849,\"note\":\"left\"},{\"time\":111.252609,\"note\":\"down\"},{\"time\":111.368706,\"note\":\"right\"},{\"time\":111.508026,\"note\":\"up\"},{\"time\":111.600906,\"note\":\"left\"},{\"time\":111.763443,\"note\":\"down\"},{\"time\":111.925987,\"note\":\"right\"},{\"time\":112.111748,\"note\":\"up\"},{\"time\":112.181404,\"note\":\"left\"},{\"time\":112.320724,\"note\":\"down\"},{\"time\":112.390388,\"note\":\"right\"},{\"time\":112.715462,\"note\":\"up\"},{\"time\":112.878006,\"note\":\"left\"},{\"time\":113.040543,\"note\":\"right\"},{\"time\":113.295967,\"note\":\"up\"},{\"time\":113.412064,\"note\":\"left\"},{\"time\":113.597824,\"note\":\"down\"},{\"time\":113.690704,\"note\":\"right\"},{\"time\":113.853241,\"note\":\"up\"},{\"time\":113.946121,\"note\":\"left\"},{\"time\":114.131882,\"note\":\"down\"},{\"time\":114.201546,\"note\":\"right\"},{\"time\":114.364082,\"note\":\"up\"},{\"time\":114.456963,\"note\":\"left\"},{\"time\":114.596283,\"note\":\"down\"},{\"time\":114.665939,\"note\":\"right\"},{\"time\":114.8517,\"note\":\"up\"},{\"time\":114.921364,\"note\":\"left\"},{\"time\":115.0839,\"note\":\"down\"},{\"time\":115.153557,\"note\":\"right\"},{\"time\":115.316101,\"note\":\"up\"},{\"time\":115.385757,\"note\":\"left\"},{\"time\":115.548302,\"note\":\"down\"},{\"time\":115.641182,\"note\":\"right\"},{\"time\":115.803719,\"note\":\"up\"},{\"time\":115.919815,\"note\":\"left\"},{\"time\":116.035919,\"note\":\"down\"},{\"time\":116.152016,\"note\":\"right\"},{\"time\":116.291336,\"note\":\"up\"},{\"time\":116.384216,\"note\":\"left\"},{\"time\":116.523537,\"note\":\"down\"},{\"time\":116.616417,\"note\":\"right\"},{\"time\":116.755737,\"note\":\"up\"},{\"time\":116.848618,\"note\":\"left\"},{\"time\":117.475555,\"note\":\"right\"},{\"time\":117.475555,\"note\":\"left\"},{\"time\":117.475555,\"note\":\"down\"},{\"time\":117.823853,\"note\":\"up\"},{\"time\":118.148933,\"note\":\"down\"},{\"time\":118.148933,\"note\":\"right\"},{\"time\":118.381134,\"note\":\"left\"},{\"time\":118.543671,\"note\":\"right\"},{\"time\":118.682991,\"note\":\"up\"},{\"time\":118.775871,\"note\":\"left\"},{\"time\":118.891975,\"note\":\"down\"},{\"time\":118.984856,\"note\":\"right\"},{\"time\":119.147392,\"note\":\"up\"},{\"time\":119.240273,\"note\":\"left\"},{\"time\":119.402809,\"note\":\"down\"},{\"time\":119.472473,\"note\":\"right\"},{\"time\":119.63501,\"note\":\"up\"},{\"time\":119.72789,\"note\":\"left\"},{\"time\":119.890434,\"note\":\"down\"},{\"time\":119.936874,\"note\":\"right\"},{\"time\":120.122627,\"note\":\"up\"},{\"time\":120.192291,\"note\":\"left\"},{\"time\":120.354828,\"note\":\"down\"},{\"time\":120.424492,\"note\":\"right\"},{\"time\":120.610252,\"note\":\"up\"},{\"time\":120.726349,\"note\":\"left\"},{\"time\":120.888885,\"note\":\"down\"},{\"time\":120.958549,\"note\":\"right\"},{\"time\":121.14431,\"note\":\"up\"},{\"time\":121.19075,\"note\":\"left\"},{\"time\":121.422951,\"note\":\"down\"},{\"time\":121.515831,\"note\":\"right\"},{\"time\":121.678368,\"note\":\"up\"},{\"time\":121.748024,\"note\":\"left\"},{\"time\":121.910568,\"note\":\"down\"},{\"time\":121.980225,\"note\":\"right\"},{\"time\":122.189209,\"note\":\"up\"},{\"time\":122.235649,\"note\":\"left\"},{\"time\":122.398186,\"note\":\"down\"},{\"time\":122.467842,\"note\":\"right\"},{\"time\":122.723267,\"note\":\"up\"},{\"time\":122.792923,\"note\":\"left\"},{\"time\":122.932243,\"note\":\"down\"},{\"time\":122.978683,\"note\":\"right\"},{\"time\":123.094788,\"note\":\"left\"},{\"time\":123.466301,\"note\":\"right\"},{\"time\":123.466301,\"note\":\"up\"},{\"time\":123.582405,\"note\":\"left\"},{\"time\":123.768166,\"note\":\"down\"},{\"time\":123.814606,\"note\":\"right\"},{\"time\":124.023582,\"note\":\"up\"},{\"time\":124.093239,\"note\":\"left\"},{\"time\":124.255783,\"note\":\"down\"},{\"time\":124.302223,\"note\":\"right\"},{\"time\":124.487984,\"note\":\"up\"},{\"time\":124.580864,\"note\":\"left\"},{\"time\":124.766624,\"note\":\"down\"},{\"time\":124.813065,\"note\":\"right\"},{\"time\":125.045258,\"note\":\"up\"},{\"time\":125.184578,\"note\":\"left\"},{\"time\":125.370338,\"note\":\"down\"},{\"time\":125.463219,\"note\":\"right\"},{\"time\":125.625763,\"note\":\"up\"},{\"time\":125.718643,\"note\":\"left\"},{\"time\":125.904396,\"note\":\"down\"},{\"time\":125.97406,\"note\":\"right\"},{\"time\":126.159821,\"note\":\"up\"},{\"time\":126.229477,\"note\":\"left\"},{\"time\":126.368797,\"note\":\"down\"},{\"time\":126.415237,\"note\":\"right\"},{\"time\":126.577774,\"note\":\"up\"},{\"time\":126.670654,\"note\":\"left\"},{\"time\":126.833199,\"note\":\"down\"},{\"time\":126.879639,\"note\":\"right\"},{\"time\":127.088615,\"note\":\"up\"},{\"time\":127.181496,\"note\":\"left\"},{\"time\":127.34404,\"note\":\"down\"},{\"time\":127.390472,\"note\":\"right\"},{\"time\":127.553017,\"note\":\"up\"},{\"time\":127.645897,\"note\":\"left\"},{\"time\":127.808434,\"note\":\"down\"},{\"time\":127.831657,\"note\":\"right\"},{\"time\":128.063858,\"note\":\"up\"},{\"time\":128.110291,\"note\":\"left\"},{\"time\":128.272827,\"note\":\"down\"},{\"time\":128.342499,\"note\":\"right\"},{\"time\":129.457047,\"note\":\"left\"},{\"time\":130.687714,\"note\":\"right\"},{\"time\":133.358002,\"note\":\"left\"},{\"time\":133.404449,\"note\":\"down\"},{\"time\":133.404449,\"note\":\"right\"}]"
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecordNew" type="Button" parent="."]
margin_left = 129.49
margin_top = 8.71885
margin_right = 222.49
margin_bottom = 28.7188
text = "Record New"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 445.891
margin_top = 10.8909
margin_right = 536.891
margin_bottom = 36.8909
rect_pivot_offset = Vector2( -562.247, -41.9695 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Copy" type="Button" parent="."]
margin_left = 132.866
margin_top = 428.281
margin_right = 223.866
margin_bottom = 454.281
rect_pivot_offset = Vector2( -562.247, -41.9695 )
text = "Copy"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="hit" from="MusicPlayer" to="." method="_on_MusicPlayer_hit"]
[connection signal="miss" from="MusicPlayer" to="." method="_on_MusicPlayer_miss"]
[connection signal="pressed" from="RecordNew" to="." method="_on_RecordNew_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Copy" to="." method="_on_Copy_pressed"]
